src/objects/Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReciprocalRelationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reciprocal Relationship</label>
        <referenceTo>Relationship__c</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Hidden Relationships List</relationshipLabel>
        <relationshipName>Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SYSTEM_SystemCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>_SYSTEM: SystemCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coworker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquaintance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Niece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wife</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Relationship</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Related_Contact_Do_Not_Change</fullName>
        <active>true</active>
        <description>Do not allow user to change Related Contact value as it damages the paired relationship data</description>
        <errorConditionFormula>and(not( ISNEW()), ISCHANGED( RelatedContact__c ))</errorConditionFormula>
        <errorDisplayField>RelatedContact__c</errorDisplayField>
        <errorMessage>Rather than change the contacts in an existing relationship, delete this relationship and create a new on between the new contacts</errorMessage>
    </validationRules>
</CustomObject>